--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             text-align: center;
             padding-top: auto;
             padding-bottom: auto;
-            font-size: 2.5vh;
+            font-size: 1rem;
         }
 
         .nav-primary a:hover {
@@ -181,7 +181,7 @@
             height: 5vh;
             color: white;
         }
-        @media screen and (min-width: 624px) {
+        @media screen and (min-width: 617px) {
             .nav-primary__links {
                 display: flex;
                 flex-wrap: nowrap;
