--- a/movies.html
+++ b/movies.html
@@ -57,22 +57,22 @@
 
     </script>
     <div class="list">
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div><div class="list__title__description__rating">76%</div>Year: 2012</div></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"></div>
+        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
+        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
+        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
+        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
+        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
+        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
+        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
+        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
+        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
+        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
+        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
+        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
+        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
+        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
+        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
+        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
     </div>
 
 
