--- a/john_wick.html
+++ b/john_wick.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>John Wick</title>
 </head>
+
 <body>
     <nav class="nav-primary">
         <ul class="nav-primary__links">
@@ -21,8 +23,27 @@
         </form>
         <a href="login.html">Login</a>
     </nav>
-    <main class = "main__movies">
+    <main class="main--title">
+        <header class="title__header">
+            <span class="title__header__name">John Wick</span>
+            <div class="title__header__rating">76 %</div>
+        </header>
+        <div class="title__description">
+            <img src="images/movies/john_wick.jpg" alt="John Wick">
+            release date: October 23 2014<br>
+            Directed by: Chad Stahelski, David Leitch<br>
+            Written By: Derek Kolstad<br>
+            Cast: Keanu Reeves, Keanu Reeves, Michael Nyqvist, Alfie Allen, Adrianne Palicki, Bridget Moynahan, Dean
+            Winters, Lance Reddick, Toby Leonard Moore, Ian McShane, John Leguizamo<br><br>
 
+
+            <p>They say, "Revenge is a dish best served cold." John Wick, a retired hitman with a dark past, is the last
+                person you'd want to provoke. But one reckless act unleashes a storm of vengeance that shakes the
+                criminal underworld to its core. As Wick takes justice into his own hands, both old allies and enemies
+                are forced to reckon with the legend they thought they'd never face again.</p>
+
+        </div>
     </main>
 </body>
+
 </html>
