--- a/movies.html
+++ b/movies.html
@@ -23,7 +23,7 @@
         </form>
         <a href="login.html">Login</a>
     </nav>
-    <div id = "btn--filter" onclick="openfilters()"><img src="icons/filter.png" ></div>   
+    <div id="btn--filter" onclick="openfilters()"><img src="icons/filter.png"></div>
     <aside class="filters">
         Filters<br><br>
         <form>
@@ -43,37 +43,115 @@
     <script>
         let open = false;
 
-        function openfilters(){
-            if (!open){
+        function openfilters() {
+            if (!open) {
                 document.querySelector(".filters").style.display = "block";
                 open = true;
             } else {
                 document.querySelector(".filters").style.display = "none";
                 open = false;
             }
-            
+
         }
 
 
     </script>
     <div class="list">
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
-        <div class = "list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained"><div class="list__title__rating">76%</div><div class = "list__title__description"><div class = "list__title__description__name">Django Unchained</div>Year: 2012<br>Director: Quentin Tarantino<br>Actors: Jamie Foxx...</div></div>
-        <div class = "list__title"><img src="images/movies/interstellar.webp" alt="Interstellar"><div class="list__title__rating">90%</div><div class = "list__title__description"><div class = "list__title__description__name">Interstellar</div>Year: 2014<br>Director: Christopher Nolan<br>Actors: Anne Hathaway...</div></div>
-        <div class = "list__title"><img src="images/movies/john_wick.jpg" alt="John Wick"><div class="list__title__rating">99%</div><div class = "list__title__description"><div class = "list__title__description__name">John Wick</div>Year: 2014<br>Director: Chad Stahelski<br>Actors: Keanu Reeves...</div></div>
-        <div class = "list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer"><div class="list__title__rating">84%</div><div class = "list__title__description"><div class = "list__title__description__name">Openheimer</div>Year: 2023<br>Director: Christopher Nolan<br>Actors:  Cillian Murphy...</div></div>
+        <div class="list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained">
+            <div class="list__title__rating">76%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">Django Unchained</div>
+                Year: 2012<br>
+                Director: Quentin Tarantino
+                <br>Actors: Jamie Foxx...
+            </div>
+        </div>
+        <div class="list__title"><img src="images/movies/interstellar.webp" alt="Interstellar">
+            <div class="list__title__rating">90%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">Interstellar</div>
+                Year: 2014<br>
+                Director: Christopher Nolan<br>
+                Actors: Anne Hathaway...
+            </div>
+        </div>
+        <div class="list__title"><img src="images/movies/john_wick.jpg" alt="John Wick">
+            <div class="list__title__rating">99%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">John Wick</div>
+                Year: 2014<br>
+                Director: Chad Stahelski<br>
+                Actors: Keanu Reeves...
+            </div>
+        </div>
+        <div class="list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer">
+            <div class="list__title__rating">84%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">Openheimer</div>
+                Year: 2023<br>
+                Director: Christopher
+                Nolan<br>
+                Actors: Cillian Murphy...
+            </div>
+        </div>
+        <div class="list__title">
+            <img src="images/movies/el_camino.jpg" alt="El Camino">
+            <div class="list__title__rating">82%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">El Camino</div>
+                Year: 2019<br>
+                Director: Vince Gilligan<br>
+                Actors: Aaron Paul
+            </div>
+        </div>
+
+        <div class="list__title">
+            <img src="images/movies/john_wick_2.jpg" alt="John Wick 2">
+            <div class="list__title__rating">85%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">John Wick 2</div>
+                Year: 2017<br>
+                Director: Chad Stahelski<br>
+                Actors: Keanu Reeves
+            </div>
+        </div>
+
+        <div class="list__title">
+            <img src="images/movies/john_wick_3.jpg" alt="John Wick 3">
+            <div class="list__title__rating">89%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">John Wick 3</div>
+                Year: 2019<br>
+                Director: Chad Stahelski<br>
+                Actors: Keanu Reeves
+            </div>
+        </div>
+
+        <div class="list__title">
+            <img src="images/movies/john_wick_4.jpg" alt="John Wick 4">
+            <div class="list__title__rating">92%</div>
+            <div class="list__title__description">
+                <div class="list__title__description__name">John Wick 4</div>
+                Year: 2023<br>
+                Director: Chad Stahelski<br>
+                Actors: Keanu Reeves
+            </div>
+        </div>
+
     </div>
+    <script>
+        let images = Array.from(document.querySelector(".list").querySelectorAll("img"));
+        
+        let min = images[0].clientWidth;
+
+        for (let i = 1; i < images.length; i++){
+            if (min > images[i].width){
+                min = images[i].width;
+            }
+        }
+
+        document.documentElement.style.setProperty('--list-image-width', min + 'px');
+    </script>
 
 
 </body>
