--- a/john_wick.html
+++ b/john_wick.html
@@ -43,6 +43,18 @@
                 are forced to reckon with the legend they thought they'd never face again.</p>
 
         </div>
+        <div class="title__comments">
+            <div class="title__comments__comment">
+                <header>Username</header>
+                <form>
+                    <textarea>
+                    </textarea>
+                    <button type="submit">
+                        Post
+                    </button>
+                </form>
+            </div>
+        </div>
     </main>
 </body>
 
