--- a/john_wick.html
+++ b/john_wick.html
@@ -43,16 +43,31 @@
                 are forced to reckon with the legend they thought they'd never face again.</p>
 
         </div>
+        <div class="title__user-comment">
+
+            <header>
+                username
+                <input type="number" min="0" max="100" class="title__user-comment__rating">
+            </header>
+            <form>
+                <textarea></textarea>
+                <button type="submit">
+                    Post
+                </button>
+            </form>
+        </div>
         <div class="title__comments">
             <div class="title__comments__comment">
-                <header>Username</header>
-                <form>
-                    <textarea>
-                    </textarea>
-                    <button type="submit">
-                        Post
-                    </button>
-                </form>
+                    <header>
+                        username
+                        78%
+                    </header>
+                    <p>John Wick is a heartwarming tale about a retired assassin who learns the true value of life,
+                        love, and a well-stocked arsenal. It's essentially a touching dog-lover's revenge fantasy turned
+                        into an ultra-violent symphony of bullets and perfectly tailored suits. The plot, much like
+                        Wick's enemies, is shot full of holes, but hey, who needs story when Keanu Reeves is reloading
+                        in slow motion? It's like a yoga class for gun enthusiasts: calm, methodical, and surprisingly
+                        therapeutic to watch.</p>
             </div>
         </div>
     </main>
