--- a/john_wick.html
+++ b/john_wick.html
@@ -30,14 +30,15 @@
         </header>
         <div class="title__description">
             <img src="images/movies/john_wick.jpg" alt="John Wick">
-            release date: October 23 2014<br>
-            Directed by: Chad Stahelski, David Leitch<br>
-            Written By: Derek Kolstad<br>
-            Cast: Keanu Reeves, Keanu Reeves, Michael Nyqvist, Alfie Allen, Adrianne Palicki, Bridget Moynahan, Dean
+            <div class = "title__description__info">
+            <span id = "title__description__info--bold">release date:</span> October 23 2014<br>
+            <span id = "title__description__info--bold">Directed by:</span> Chad Stahelski, David Leitch<br>
+            <span id = "title__description__info--bold">Written By:</span> Derek Kolstad<br>
+            <span id = "title__description__info--bold">Cast:</span> Keanu Reeves, Keanu Reeves, Michael Nyqvist, Alfie Allen, Adrianne Palicki, Bridget Moynahan, Dean
             Winters, Lance Reddick, Toby Leonard Moore, Ian McShane, John Leguizamo<br><br>
+            </div>
 
-
-            <p>They say, "Revenge is a dish best served cold." John Wick, a retired hitman with a dark past, is the last
+            <p class="title__description__about">They say, "Revenge is a dish best served cold." John Wick, a retired hitman with a dark past, is the last
                 person you'd want to provoke. But one reckless act unleashes a storm of vengeance that shakes the
                 criminal underworld to its core. As Wick takes justice into his own hands, both old allies and enemies
                 are forced to reckon with the legend they thought they'd never face again.</p>
@@ -47,7 +48,7 @@
 
             <header>
                 username
-                <input type="number" min="0" max="100" class="title__user-comment__rating">
+                <span><input type="number" min="1" max="10" class="title__user-comment__rating"> / 10 </span>
             </header>
             <form>
                 <textarea></textarea>
@@ -56,11 +57,12 @@
                 </button>
             </form>
         </div>
+        <header class="title__comments__other-comments"><h2>Other comments</h2></header>
         <div class="title__comments">
             <div class="title__comments__comment">
                     <header>
                         username
-                        78%
+                        <span>9 / 10</span>
                     </header>
                     <p>John Wick is a heartwarming tale about a retired assassin who learns the true value of life,
                         love, and a well-stocked arsenal. It's essentially a touching dog-lover's revenge fantasy turned
@@ -69,6 +71,63 @@
                         in slow motion? It's like a yoga class for gun enthusiasts: calm, methodical, and surprisingly
                         therapeutic to watch.</p>
             </div>
+            <div class="title__comments__comment">
+                <header>
+                    MovieFan22
+                    <span>8 / 10</span>
+                </header>
+                <p>John Wick is an adrenaline-pumping ride from start to finish. The action scenes are top-notch, and Keanu Reeves delivers an amazing performance. The story is simple but effective, making it a great watch for action fans!</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    ActionAddict
+                    <span>10 / 10</span>
+                </header>
+                <p>This is hands down one of the best action films ever made. Every fight is choreographed to perfection, and the world-building is fascinating. John Wick is a masterpiece of its genre.</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    Cinephile_01
+                    <span>7 / 10</span>
+                </header>
+                <p>The action is spectacular, and the visuals are stylish, but the plot is a bit too thin for my taste. Still, it's an enjoyable movie for what it is.</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    Bulletproof23
+                    <span>9 / 10</span>
+                </header>
+                <p>John Wick is pure action magic. The attention to detail in the fight sequences is incredible, and the film never slows down. Definitely worth watching!</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    DogLoverForever
+                    <span>10 / 10</span>
+                </header>
+                <p>Any movie that starts with avenging a dog gets a 10 from me. The emotional weight of the story combined with breathtaking action scenes makes it unforgettable.</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    JustAnOpinion
+                    <span>6 / 10</span>
+                </header>
+                <p>The action is undeniably impressive, but the lack of character depth and a more engaging storyline keeps it from being a favorite of mine. Still, it’s good fun if you’re into stylish violence.</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    CasualViewer
+                    <span>8 / 10</span>
+                </header>
+                <p>I didn't expect to like this movie as much as I did. It's simple, straightforward, and unapologetically action-packed. Keanu Reeves makes it all so believable!</p>
+            </div>
+            <div class="title__comments__comment">
+                <header>
+                    AssassinFan98
+                    <span>9 / 10</span>
+                </header>
+                <p>The combination of revenge, honor, and an underground assassin network is captivating. John Wick stands out as a modern action classic with tons of rewatch value.</p>
+            </div>
+            
         </div>
     </main>
 </body>
