--- a/john_wick.html
+++ b/john_wick.html
@@ -48,10 +48,12 @@
                 criminal underworld to its core. As Wick takes justice into his own hands, both old allies and enemies
                 are forced to reckon with the legend they thought they'd never face again.</p>
         
-                <ul class="title__description__platforms">
+            <div class="title__description__platforms">
+                <ul>
                     <li>Netflix</li>
                     <li>AppleTv</li>
                 </ul>
+            </div>
         </div>
        
         <script>
