--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 
         }
         .news article {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 70px 1fr;
             margin: 20px;
             padding: 10px;
             aspect-ratio: 16/9;
@@ -167,6 +170,7 @@
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         }
         .news article header {
+            align-self: center;
             text-align: center;
             margin-bottom: 10px;
             font-family: var(--font-B);
