--- a/shows.html
+++ b/shows.html
@@ -30,7 +30,7 @@
             Rating<br><br>
             Min rating <input type="number" min="0" max="100" name="min-rating" id="min"><br><br>
             Max rating <input type="number" min="0" max="100" name="max-rating" id="max"><br><br>
-            Release date of the first episode<br><br>
+            Year of the first episode<br><br>
             <input type="range" min="1980" max="2024" value="2000" id="year"
                 oninput="this.nextElementSibling.value = this.value"> <output for="year">2000</output><br><br>
             Platforms<br><br>
