--- a/news.html
+++ b/news.html
@@ -16,12 +16,13 @@
             <li><a href="shows.html">TV shows</a></li>
             <li><a href="videogames.html">Videogames</a></li>
             <li><a href="news.html">News</a></li>
+            <li><a href="login.html" id="ul__login">Login</a></li>
         </ul>
         <form id="nav-primary__search">
             <input type="text">
             <input type="button" value="search">
         </form>
-        <a href="login.html">Login</a>
+        <a href="login.html" id="login_under_ul">Login</a>
     </nav>
     <main class="main--news">
     <div class = "news__opener--package">
