--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class = "login">
-        <img src="icons/previous.png" onclick = "location.href = 'login.html'" id="registration__back">
+        <img src="icons/previous.png" onclick = "location.href = 'login.html'" id="login__back">
         <form id = "registration">
             <label for="first_name">First Name</label><input type = "text" name = "First_name" id = "first_name">
             <label for="last_name">Last Name</label><input type="text" name = "Last_Name" id="last_name">
