--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class = "login">
+        <img src="icons/previous.png" onclick = "location.href = 'index.html'" id="login__back">
         <form>
             <label for = "username">Username</label> <input type = "text" name = "username" id = "username" required>
             <label for="password">password</label> <input type = "password" name = "password" id = "password" required>
