--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
         <aside class="news__aside">
             <div class="news__aside__sort">
                 Sort<br><br>
-                <label>from latest to oldest <input type="radio" name="sort"></label><br><br>
+                <label>from latest to oldest <input type="radio" name="sort" checked></label><br><br>
                 <label>from oldest to latest <input type="radio" name="sort"></label><br><br>
             </div>
             <form class="news__aside__newsletter">
